--- a/deploy.yml
+++ b/deploy.yml
@@ -16,14 +16,14 @@ spec:
     spec:
       containers:
       - name: cont1
-        image: abishnu08/hotstar:latest
+        image: abhijit7683/hotstar:latest
         ports:
           - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: bishnu
+  name: abhijit
 spec:
   type: LoadBalancer
   selector:
